[project]
name = "ncut-jlcc-fastapi"
version = "0.1.1"
description = "日语社网站后端服务"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authing>=5.1.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.119.1",
]

[tool.pyrefly]
project-includes = ["**/*.py*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
    "**/.[!/.]*/**/*",
]

[[tool.uv.index]]
url="https://pypi.tuna.tsinghua.edu.cn/simple"
default=true

[dependency-groups]
dev = [
    "pyrefly>=0.38.2",
    "ruff>=0.14.1",
]
